# django-projects

./: .prettierignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh  test_soundstripe_api.py  verify_search_flow.py
chats/: forms.py  models.py  urls.py  utils.py  views.py
chats/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
pages/: views.py
search_orchestration/: apps.py  urls.py  views.py
search_orchestration/adapters/: soundstripe_adapter.py
search_orchestration/adapters/ai/: __init__.py  llm_search_orchestrator_v2.py  llm_sfx_search_orchestrator.py  llms.py  schemas.py  state.py  taxonomy.py  tools.py  utils.py
search_orchestration/adapters/ai/prompts/: __init__.py  explain.py  selection.py
search_orchestration/clients/: soundstripe_client.py
search_orchestration/urls/: __init__.py  ai_sfx_search.py  ai_songs_search.py
search_orchestration/views/: ai_sfx_search.py  ai_songs_search.py
templates/: _base.html
templates/chats/: _messages.html  chat.html  home.html
templates/search_orchestration/: search.html  sfx_search.html
